--- a/doc/Acronimos.tex
+++ b/doc/Acronimos.tex
@@ -14,9 +14,9 @@
 
 \acro{GNSS}[GNSS]{Sistema Global de Navegación por Satélite}
 
-\acro{GPS}[GPS]{Geospatial Position System}
+\acro{GPS}[GPS]{Sistemas de Posicionamiento Global}
 
-\acro{GIS}[GIS]{Geospatial Information System}
+\acro{GIS}[GIS]{Sistemas de Información Geospacial}
 
 \acro{XML}[XML]{Extensive Markup Language}
 
