--- a/doc/Arquitectura.tex
+++ b/doc/Arquitectura.tex
@@ -1,6 +1,6 @@
 %!TeX root=MemoriaTFG.tex
 
-\chapter{Arquitectura de la aplicación}
+\chapter{Arquitectura de la aplicación} \label{chapter:AppArchitecture}
 
 En esta sección se presenta la arquitectura de la aplicación. Se realiza una 
 descripción de las funcionalidades que lo componen, se definenen los requerimientos necesarios 
@@ -94,9 +94,9 @@ El detalle de esta información se describe en detalle en el capítulo \ref{sect
 Explicadas las funcionalidades de la aplicación de Track Analyzer los requerimientos identificados son los siguientes:
 \begin{enumerate}[label={R.\arabic*.}]
 
-\item Importación de datos La aplicación debe realizar una importación de los datos desde un fichero .\ac{GPX} al modelo lógico elegido para la el posterior tratamiento.
+\item \textbf{Importación de datos} La aplicación debe realizar una importación de los datos desde un fichero .\ac{GPX} al modelo lógico elegido para la el posterior tratamiento.
 
-\item \textbf{Análisis de ruta} La aplicación debe realizar un análisis de la ruta que proporcione por una parte indicadores y por otro valores medibles, cuantificables y utilizables para realizar una simulación 
+\item \textbf{Análisis de trayectoria} La aplicación debe realizar un análisis de la trayectoria que proporcione por una parte indicadores y por otro valores medibles, cuantificables y utilizables para realizar una simulación 
 lo más precisa posible.
 
 \item \textbf{Almacenamiento de las rutas reales en base de datos} La aplicación debe realizar un almacenamiento de los datos analizados en una base de datos, con el objetivo de poder ser repetible
