--- a/doc/Bibliografia.bib
+++ b/doc/Bibliografia.bib
@@ -15,6 +15,29 @@ pages={Pàgina inicial -Pàgina final},
 address={Ciutat, País},
 }
 
+@ARTICLE{GPS01,
+author={GPS.gov},
+title={GPS Applications},
+year={2014},
+url={https://www.gps.gov/applications},
+}
+
+@ARTICLE{Borkovich01,
+author={Borkovich, D. , Noah, P.},
+title={Big Data in the Information Age:
+Exploring the Intellectual Foundation of
+Communication Theory },
+year={2014},
+url={https://files.eric.ed.gov/fulltext/EJ1140800.pdf},
+}
+
+@ARTICLE{Viskic01,
+author={Viskic, I.},
+title={Enhancing the Quality of Uber’s Maps with Metrics Computation},
+year={2018},
+url={https://eng.uber.com/maps-metrics-computation},
+}
+
 @INPROCEEDINGS{bib3,
 title={{Títol de l'article de congrés}},
 author={{Cognoms-autor, Nom}},
@@ -32,6 +55,15 @@ title={Gpxpy. Project description},
 year={2012},
 url={https://pypi.org/project/gpxpy/},
 }
+
+@ARTICLE{Pandas01,
+author={Pandas development team},
+title={Pandas documentation},
+year={2008-2014},
+url={https://pandas.pydata.org/docs},
+}
+
+
 
 @ARTICLE{Morales01,
 author={Morales, A.},
