--- a/doc/ConceptosPrincipales.tex
+++ b/doc/ConceptosPrincipales.tex
@@ -3,7 +3,7 @@
 %Introduction to GPS: The Global Positioning System
 %OGC® Geography Markup Language (GML) — Extended schemas and encoding rules
 
-\chapter{Conceptos principales}
+\chapter{Conceptos principales} \label{chapter:PrincipalConcepts}
 
 En este capítulo se realiza una introducción al lector de los conceptos básicos y las 
 tecnologías necesarias dentro del marco de la propuesta. Se realiza a los conceptos de sistemas de 
