--- a/doc/Experimentacion.tex
+++ b/doc/Experimentacion.tex
@@ -1,5 +1,5 @@
 %!TeX root=MemoriaTFG.tex
-\chapter{Experimentacion}
+\chapter{Experimentacion} \label{chapter:Experimentation}
 En este capítulo se documentan las pruebas realizadas al aplicativo propuesto con el objetivo de analizar los resultados obtenidos del análisis y la simulación.
 Esta experimentación parte de unas condiciones generales. Contamos con un total de 25 rutas reales realizadas en el territorio delimitado del Castell de Bellver (Mallorca). Para la realización de la experimentación contamos con un número reducido de muestras. Para que el resultado del análisis pueda representar un comportamiento destacable se han replicado las mismas rutas un total de 7 veces, contando entonces con un total de más de 200 trayectorias, de una muestra inicial de 30. De esta forma alimentamos el modelo con una cantidad de información suficiente para apreciar resultados. Estas condiciones de entrada parten de la necesidad de alimentar el modelo con una información que pueda llegar a ser representativa.
 
@@ -172,7 +172,7 @@ Con esta información se aprecia que las simulaciones para este conjunto bajo de
 \subsection{Anexo: Muestra de simulaciones con datos introducidos} \label{subseciton:SimulationSample}\begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.95\textwidth]{./Imagenes/data-simulation/track1.png}
-\caption{Simulación sin datos iniciales.}
+\caption{Simulación con carga de datos inicial. Ejemplo 1.}
 \end{center}
 \label{figure:Simulation1}
 \end{figure}
@@ -180,7 +180,7 @@ Con esta información se aprecia que las simulaciones para este conjunto bajo de
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.95\textwidth]{./Imagenes/data-simulation/track2.png}
-\caption{Simulación sin datos iniciales.}
+\caption{Simulación con carga de datos inicial. Ejemplo 2.}
 \end{center}
 \label{figure:Simulation2}
 \end{figure}
@@ -188,7 +188,7 @@ Con esta información se aprecia que las simulaciones para este conjunto bajo de
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.95\textwidth]{./Imagenes/data-simulation/track3.png}
-\caption{Simulación sin datos iniciales.}
+\caption{Simulación con carga de datos inicial. Ejemplo 3.}
 \end{center}
 \label{figure:Simulation3}
 \end{figure}
@@ -196,7 +196,7 @@ Con esta información se aprecia que las simulaciones para este conjunto bajo de
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.95\textwidth]{./Imagenes/data-simulation/track4.png}
-\caption{Simulación sin datos iniciales.}
+\caption{Simulación con carga de datos inicial. Ejemplo 4.}
 \end{center}
 \label{figure:Simulation4}
 \end{figure}
@@ -205,7 +205,7 @@ Con esta información se aprecia que las simulaciones para este conjunto bajo de
 \subsection{Anexo: Muestra de simulaciones sin datos} \label{subseciton:SimulationSample}\begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.95\textwidth]{./Imagenes/empty-simulation/track1.png}
-\caption{Simulación sin datos iniciales.}
+\caption{Simulación sin datos iniciales. Ejemplo 1.}
 \end{center}
 \label{figure:Simulation1}
 \end{figure}
@@ -213,7 +213,7 @@ Con esta información se aprecia que las simulaciones para este conjunto bajo de
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.95\textwidth]{./Imagenes/empty-simulation/track2.png}
-\caption{Simulación sin datos iniciales.}
+\caption{Simulación sin datos iniciales. Ejemplo 2.}
 \end{center}
 \label{figure:Simulation2}
 \end{figure}
@@ -221,7 +221,7 @@ Con esta información se aprecia que las simulaciones para este conjunto bajo de
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.95\textwidth]{./Imagenes/empty-simulation/track3.png}
-\caption{Simulación sin datos iniciales.}
+\caption{Simulación sin datos iniciales. Ejemplo 3.}
 \end{center}
 \label{figure:Simulation3}
 \end{figure}
@@ -229,7 +229,7 @@ Con esta información se aprecia que las simulaciones para este conjunto bajo de
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.95\textwidth]{./Imagenes/empty-simulation/track4.png}
-\caption{Simulación sin datos iniciales.}
+\caption{Simulación sin datos iniciales . Ejemplo 4.}
 \end{center}
 \label{figure:Simulation4}
 \end{figure}
