--- a/doc/Simulacion.tex
+++ b/doc/Simulacion.tex
@@ -1,6 +1,6 @@
 %!TeX root=MemoriaTFG.tex
 
-\chapter{Simulación de trayectorias}
+\chapter{Simulación de trayectorias} \label{chapter:Simulation}
 Se define como simulación de una trayectoria al proceso por el cual, mediante los valores 
 medibles y cuantificables extraídos del proceso de análisis, se recrea una trayectoria aleatoria que 
 cumpla los mismos criterios. El proceso de simulación de esta propuesta tiene dos procesos 
